Quote arguments containing spaces when expanding the list of arguments in a ShellCommand.

BUG: 156826
BACKPORT: 4.1

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=837723